--- a/validitech/p/login.html
+++ b/validitech/p/login.html
@@ -17,19 +17,19 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 
-    <!-- Meta -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Media Post</title>
+    <title>Log In</title>
 
-    <link href="./r/index.css" rel="stylesheet">
+    <!-- Meta -->
+    <link href="../r/index.css" rel="stylesheet">
 </head>
 
-<body class="landing">
+<body>
 
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid ms-5 me-5">
+        <div class="container-fluid  ms-5 me-5">
             <span class="navbar-brand fw-bold">Validitech</span>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar">
                 <span class="navbar-toggler-icon"></span>
@@ -40,37 +40,77 @@
     </nav>
 
     <!-- Container -->
-    <div class="container-fluid p-5 w-100 fill mb-5">
-        <h1 class="text-center mt-5 mb-5">
-            Selamat Datang di Validitech! <br/>
-            Wadah untuk produk pembelajaran yang butuh validasi.
-        </h1>
-        <h3 class="text-center mt-5 mb-5">
-            Dapatkan validasi dari pakar produk pembelajaran dengan mudah. <br/>
-            Dengan indikator validasi yang telah disesuaikan. <br />
-            Sistem validitas paling inovatif.
-        </h3>
-        <div class="w-100 text-center mt-5 mb-5">
-            <a href="./p/register.html"><button class="btn btn-primary me-3">Daftar Sekarang!</button></a>
-            <a href="./p/register.html?role=validator"><button class="btn btn-success ms-3">Daftar sebagai Validator</button></a>
-        </div>
+    <div class="container-fluid p-5 w-75 fill">
+        <form class="bg-body-tertiary p-5">
+            <h1 class="text-center mb-5">Log In</h1>
+            <!-- Email Pengguna -->
+            <input id="email" class="form-control mb-3" type="text" placeholder="Email" required>
+            <!-- Password Pengguna -->
+            <div class="input-group mb-3">
+                <input class="form-control" type="password" id="password" placeholder="Password" required>
+                <button class="btn btn-outline-light" type="button" id="togglePassword">
+                    <i class="bi bi-eye-slash" id="toggleIcon"></i>
+                </button>
+            </div>
+
+            <!-- Submit -->
+            <button class="btn btn-primary mt-2 w-100" type="button" onclick="login()">Log In</button>
+
+            <div class="w-100 text-center mt-5">
+                Belum punya akun? <a href="./register.html">Daftar Sekarang!</a>
+            </div>
+        </form>
     </div>
 </body>
+
+<br />
 <footer class="bg-body-tertiary p-3 text-center">
     Habil Ihsan © 2024
 </footer>
+
+</html>
 
 <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
-<script src="./r/index.js"></script>
+<script src="../r/index.js"></script>
 <script>
+    function login() {
+        const email = document.getElementById("email").value
+        const password = document.getElementById("password").value
+
+        firebase.auth().signInWithEmailAndPassword(email, password)
+            .then((user) => {
+                alert("Login berhasil! Selamat datang!", user)
+                location.replace("./profil.html")
+            })
+            .catch((error) => {
+                const errorCode = error.code
+                const errorMessage = error.message
+                alert("Login gagal!\n", errorCode, errorMessage)
+            })
+    }
+
+    const toggleIcon = document.getElementById("toggleIcon")
+    const password = document.getElementById("password")
+    document.getElementById("togglePassword").addEventListener("click", function () {
+        if (password.type === "password") {
+            password.type = "text"
+            toggleIcon.classList.remove("bi-eye-slash")
+            toggleIcon.classList.add("bi-eye")
+        } else {
+            password.type = "password"
+            toggleIcon.classList.remove("bi-eye")
+            toggleIcon.classList.add("bi-eye-slash")
+        }
+    })
+
     function logout() {
         firebase.auth().signOut()
             .then(() => {
                 alert("Logout berhasil!")
-                location.replace("./p/login.html")
+                location.replace("./login.html")
             })
             .catch((error) => {
                 alert(error.message)
@@ -79,27 +119,8 @@
 
     firebase.auth().onAuthStateChanged((user) => {
         if (user) {
-            const logoutNav = `<span class="link-danger ms-5" onclick="logout()">Log Out</span>`
-
-            const databaseRef = firebase.firestore().collection("users").doc(user.uid)
-            databaseRef.get().then((doc) => {
-                if (doc.data().role === "kreator") {
-                    const kreatorNav = `
-                    <span type="button" class="link-light ms-5" onclick="location.replace('./p/tabelValidator.html')">List Validator</span>
-                    <span type="button" class="link-light ms-5" onclick="location.replace('./p/submit.html')">Submit Media</span>
-                    <span type="button" class="link-light ms-5" onclick="location.replace('./p/profil.html')">Profil</span>
-                    `
-                    document.getElementById("navbar").innerHTML = kreatorNav + logoutNav
-                }
-                if (doc.data().role === "validator") {
-                    const validatorNav = `
-                    <span type="button" class="link-light ms-5" onclick="location.replace('./p/submit.html')">Validasi Media</span>
-                    <span type="button" class="link-light ms-5" onclick="location.replace('./p/profil.html')">Profil</span>
-                    `
-                    document.getElementById("navbar").innerHTML = validatorNav + logoutNav
-                }
-            })
+            const logoutNav = `<span class="link-danger ms-2" onclick="logout()">Log Out</span>`
             document.getElementById("navbar").innerHTML = logoutNav
         }
-        })
+    })
 </script>
